commited by wangyuxiao at November 20, 2022.

--- a/examples/urban_driver/closed_loop_test.ipynb
+++ b/examples/urban_driver/closed_loop_test.ipynb
@@ -28,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "project path:  /mnt/share_disk/user/xijinhao/l5kit\n"
+      "project path:  /mnt/share_disk/user/xijinhao/l5kit-model-based-offline-rl\n"
      ]
     }
    ],
@@ -594,7 +594,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.13 ('ScePT')",
    "language": "python",
    "name": "python3"
   },
@@ -608,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.13"
   },
   "pycharm": {
    "stem_cell": {
@@ -617,6 +617,11 @@
      "collapsed": false
     },
     "source": []
+   }
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b18969c47003c095d5219e319e3a5ca4de13be2fd6e205ce2b38bde586b1a59b"
    }
   }
  },
