--- a/examples/urban_driver/train.ipynb
+++ b/examples/urban_driver/train.ipynb
@@ -362,7 +362,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.13 ('ScePT')",
    "language": "python",
    "name": "python3"
   },
@@ -376,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   },
   "pycharm": {
    "stem_cell": {
@@ -385,6 +385,11 @@
      "collapsed": false
     },
     "source": []
+   }
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b18969c47003c095d5219e319e3a5ca4de13be2fd6e205ce2b38bde586b1a59b"
    }
   }
  },
