--- a/examples/RL/notebooks/ppo_policy_training.ipynb
+++ b/examples/RL/notebooks/ppo_policy_training.ipynb
@@ -16,30 +16,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "806093d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not running in Google Colab.\n"
+     ]
+    }
+   ],
    "source": [
     "#@title Download L5 Sample Dataset and install L5Kit\n",
+    "# import os\n",
+    "# RunningInCOLAB = 'google.colab' in str(get_ipython())\n",
+    "# if RunningInCOLAB:\n",
+    "#     !wget https://raw.githubusercontent.com/lyft/l5kit/master/examples/setup_notebook_colab.sh -q\n",
+    "#     !sh ./setup_notebook_colab.sh\n",
+    "#     os.environ[\"L5KIT_DATA_FOLDER\"] = open(\"./dataset_dir.txt\", \"r\").read().strip()\n",
+    "# else:\n",
+    "#     os.environ[\"L5KIT_DATA_FOLDER\"] = \"/tmp/level5_data\"\n",
+    "#     print(\"Not running in Google Colab.\")\n",
     "import os\n",
-    "RunningInCOLAB = 'google.colab' in str(get_ipython())\n",
-    "if RunningInCOLAB:\n",
-    "    !wget https://raw.githubusercontent.com/lyft/l5kit/master/examples/setup_notebook_colab.sh -q\n",
-    "    !sh ./setup_notebook_colab.sh\n",
-    "    os.environ[\"L5KIT_DATA_FOLDER\"] = open(\"./dataset_dir.txt\", \"r\").read().strip()\n",
-    "else:\n",
-    "    os.environ[\"L5KIT_DATA_FOLDER\"] = \"/tmp/level5_data\"\n",
-    "    print(\"Not running in Google Colab.\")"
+    "os.environ[\"L5KIT_DATA_FOLDER\"] = \"/root/zhufenghua12/l5kit/prediction\"\n",
+    "print(\"Not running in Google Colab.\")\n",
+    "os.chdir(\"/root/zhufenghua12/wangyuxiao/l5kit-wyx/examples/RL/notebooks\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "585b1fe7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "project path:  /root/zhufenghua12/wangyuxiao/l5kit-wyx/l5kit\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
+    "import sys\n",
+    "project_path = \"/root/zhufenghua12/wangyuxiao/l5kit-wyx/l5kit\"\n",
+    "print(\"project path: \", project_path)\n",
+    "sys.path.append(project_path)\n",
+    "\n",
     "import gym\n",
     "\n",
     "from stable_baselines3 import PPO\n",
@@ -60,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2ea81f77",
    "metadata": {},
    "outputs": [],
@@ -87,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "b04c8313",
    "metadata": {},
    "outputs": [],
@@ -130,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4da5ac39",
    "metadata": {},
    "outputs": [],
@@ -159,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "dc28b605",
    "metadata": {},
    "outputs": [],
@@ -183,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "998a927f",
    "metadata": {},
    "outputs": [],
@@ -210,13 +242,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "d474019b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using cuda device\n"
+     ]
+    }
+   ],
    "source": [
     "# define model\n",
-    "model = PPO(\"CnnPolicy\", env, policy_kwargs=policy_kwargs, verbose=1, n_steps=num_rollout_steps,\n",
+    "model = PPO(\"MultiInputPolicy\", env, policy_kwargs=policy_kwargs, verbose=1, n_steps=num_rollout_steps,\n",
     "            learning_rate=lr, gamma=gamma, tensorboard_log=tensorboard_log, n_epochs=n_epochs,\n",
     "            clip_range=clip_schedule, batch_size=batch_size, seed=seed, gae_lambda=gae_lambda)"
    ]
@@ -233,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f19803ea",
    "metadata": {},
    "outputs": [],
@@ -271,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_steps = 3000\n",
+    "n_steps = 3  # 3000\n",
     "model.learn(n_steps, callback=callback_list)\n"
    ]
   },
@@ -369,7 +409,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "l5kit",
    "language": "python",
    "name": "python3"
   },
@@ -383,7 +423,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "e1bc8ec704d0ad440cb827cd1b15710dca298a0a113979f9774f204b57d83d20"
+   }
   }
  },
  "nbformat": 4,
